# godaddy_ddns

./: .gitignore  Cargo.toml  readme.md
docker/: Dockerfile  crontab  entrypoint.sh
src/: main.rs
src/file_handler/: mod.rs
src/file_handler/path_handler/: mod.rs
src/go_daddy_ddns/: mod.rs
src/ip_handler/: ip.rs  mod.rs
src/records_handler/: dns_record.rs  mod.rs
