[package]
name = "godaddy_ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"]}
serde_json = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "1.16.0"
strfmt = "0.1.6"